--- a/App-RK-BM/Info.plist
+++ b/App-RK-BM/Info.plist
@@ -2,17 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleURLTypes</key>
-	<array>
-		<dict>
-			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>com.googleusercontent.apps.791586385783-cltnretmneguvgn4q0karqdu4ne0qspq</string>
-			</array>
-		</dict>
-	</array>
+	<key>NSHealthUpdateUsageDescription</key>
+	<string>Usaremos su información para nuestro estudio.</string>
+	<key>NSHealthShareUsageDescription</key>
+	<string>Usaremos su información para nuestro estudio.</string>
+	<key>NSHealthClinicalHealthRecordsShareUsageDescription</key>
+	<string>Usaremos su información para nuestro estudio.</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
