--- a/App-RK-BM/Info.plist
+++ b/App-RK-BM/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>GIDClientID</key>
+	<string>791586385783-f3dufff1iqsjss7a9e9u8e7oeh29i8j1.apps.googleusercontent.com</string>
 	<key>NSHealthUpdateUsageDescription</key>
 	<string>Usaremos su información de manera anonima para nuestro estudio.</string>
 	<key>NSHealthShareUsageDescription</key>
