feat(esp32 BT): version previa del control del esp32 y corrección de errores, no acabado

--- a/App-RK-BM/Info.plist
+++ b/App-RK-BM/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>Necesitamos su Bluetooth para la conexión con el SmartWatch.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Necesitamos acceder a su ubicación para obtener el país, estado y ciudad.</string>
 	<key>GIDClientID</key>
