--- a/App-RK-BM/Info.plist
+++ b/App-RK-BM/Info.plist
@@ -6,6 +6,8 @@
 	<string>Necesitamos su Bluetooth para la conexión con el SmartWatch.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Necesitamos acceder a su ubicación para obtener el país, estado y ciudad.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Necesitamos acceder a su ubicación para obtener el país, estado y ciudad.</string>
 	<key>GIDClientID</key>
 	<string>791586385783-f3dufff1iqsjss7a9e9u8e7oeh29i8j1.apps.googleusercontent.com</string>
 	<key>NSHealthUpdateUsageDescription</key>
